* Laeyths
** New: Added Enrage timer to Laethys. (10 minutes, unconfirmed)
** Change: Add Timer is now limited to appearing in Phase 1 only.
** Change: Reduced Timer for Liquid Gold (after initial)
* Maelforge Final
** New: Added Enrage timer.
** New: Added Unit Type ID for P2 version of Maelforge.
** New: Added Phase Tracking for all three phases. (Initial)
** Change: Adjusted the personal alert default colors for both versions of Hellfire debuff.

Primeval Feast
* Atrophinius
** New: Added buff remove triggers for Mechanic Spy's Anguish timers.

Hammerknell Fortress
* Akylios
** Change: Both types of Phase 2 triggers are enabled by default.
** Note: You can enable both Triggers as KBM will only ever use one. If the percentage trigger fails, KBM will wait for the Emote.

Translations
* French Updated.
* German Updated.
* Russian Updated.

----
v1.1.9

Mechanic Spy
* Fixed: Issue with new Static type timers attempting to initialize as nil rather than 0.

Infernal Dawn
* Ituziel
** Fixed: Trigger actually added to switch Ituziel's Phase Monitor to final phase.

----
v1.1.8

Commands
* New: /kbmdefault will now reset the position of both the Menu Button and Menu Window to central.
* New: The /kbmdefault command will also enable the Menu Button as visible and unlocked for positioning (Right Mouse Drag).
* Note: The /kbmdefault command will eventually be expanded upon to accept arguments, such as All, Button, Window, Timers, Alerts etc...
* Note: The Menu Window itself will soon gain "Default" and "Default All" buttons in various areas to compliment the new /kbmdefault command.

System
* Encounters
** Change: The encounter start specifics have now changed. Mods now have direct control over starting encounters.
** New: The Ignore List for untracked units is back, this should increase performance in many encounters.
** New: New Condition added to each trigger type for possible victories. (Not only Unit deaths can trigger a victory condition)